Cleaned up/minimized STDOUT from ensembleswarm models hyperparameter optimization, tweaked hyperparameter search space for MLPRegressor.

--- a/examples/regression_calorie_burn.ipynb
+++ b/examples/regression_calorie_burn.ipynb
@@ -10,18 +10,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "52073aa2",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "/workspaces/ensembleswarm\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pickle\n",
     "import logging\n",
@@ -56,7 +48,8 @@
     "logging.basicConfig(\n",
     "    handlers=[RotatingFileHandler(\n",
     "        f'{log_dir}/{example_name}.log',\n",
-    "        maxBytes=100000, backupCount=10\n",
+    "        maxBytes=1000000,\n",
+    "        backupCount=10\n",
     "    )],\n",
     "    level=logging.DEBUG,\n",
     "    format='%(levelname)s - %(name)s - %(message)s'\n",
@@ -73,33 +66,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "94c1234f",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 750000 entries, 0 to 749999\n",
-      "Data columns (total 9 columns):\n",
-      " #   Column      Non-Null Count   Dtype  \n",
-      "---  ------      --------------   -----  \n",
-      " 0   id          750000 non-null  int64  \n",
-      " 1   Sex         750000 non-null  object \n",
-      " 2   Age         750000 non-null  int64  \n",
-      " 3   Height      750000 non-null  float64\n",
-      " 4   Weight      750000 non-null  float64\n",
-      " 5   Duration    750000 non-null  float64\n",
-      " 6   Heart_Rate  750000 non-null  float64\n",
-      " 7   Body_Temp   750000 non-null  float64\n",
-      " 8   Calories    750000 non-null  float64\n",
-      "dtypes: float64(6), int64(2), object(1)\n",
-      "memory usage: 51.5+ MB\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "data_df=pd.read_csv('examples/example_data/calories.csv')\n",
     "data_df.info()"
@@ -107,32 +77,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "85f75481",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 375000 entries, 0 to 374999\n",
-      "Data columns (total 8 columns):\n",
-      " #   Column      Non-Null Count   Dtype  \n",
-      "---  ------      --------------   -----  \n",
-      " 0   Sex         375000 non-null  object \n",
-      " 1   Age         375000 non-null  int64  \n",
-      " 2   Height      375000 non-null  float64\n",
-      " 3   Weight      375000 non-null  float64\n",
-      " 4   Duration    375000 non-null  float64\n",
-      " 5   Heart_Rate  375000 non-null  float64\n",
-      " 6   Body_Temp   375000 non-null  float64\n",
-      " 7   Calories    375000 non-null  float64\n",
-      "dtypes: float64(6), int64(1), object(1)\n",
-      "memory usage: 22.9+ MB\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "data_df.drop('id', axis=1, inplace=True, errors='ignore')\n",
     "train_df, test_df=train_test_split(data_df, test_size=0.5)\n",
@@ -153,26 +101,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "a2f5fecf",
    "metadata": {},
    "outputs": [],
    "source": [
     "ensemble_members=100\n",
     "\n",
-    "# data_ensemble=DataSet(\n",
-    "#     label='Calories',\n",
-    "#     train_data=train_df,\n",
-    "#     test_data=test_df,\n",
-    "#     string_features=['Sex'],\n",
-    "#     data_directory='examples/ensembleset_data'\n",
-    "# )\n",
+    "data_ensemble=DataSet(\n",
+    "    label='Calories',\n",
+    "    train_data=train_df,\n",
+    "    test_data=test_df,\n",
+    "    string_features=['Sex'],\n",
+    "    data_directory='examples/ensemblesets',\n",
+    "    ensembleset_name='calories.h5'\n",
+    ")\n",
     "\n",
-    "# data_ensemble.make_datasets(\n",
-    "#     n_datasets=ensemble_members,\n",
-    "#     frac_features=0.7,\n",
-    "#     n_steps=3\n",
-    "# )"
+    "data_ensemble.make_datasets(\n",
+    "    n_datasets=ensemble_members,\n",
+    "    frac_features=0.7,\n",
+    "    n_steps=3\n",
+    ")"
    ]
   },
   {
@@ -193,8 +142,8 @@
     "%%time\n",
     "\n",
     "swarm = Swarm(\n",
-    "    ensembleset = 'examples/ensembleset_data/ensembleset.h5',\n",
-    "    swarm_directory = 'examples/ensembleswarm_models'\n",
+    "    ensembleset = 'examples/ensemblesets/calories.h5',\n",
+    "    swarm_directory = 'examples/swarms/calories'\n",
     ")\n",
     "\n",
     "swarm.optimize_swarm(sample = 10000)"
@@ -222,14 +171,14 @@
     "    'RMSLE': []\n",
     "}\n",
     "\n",
-    "with h5py.File('ensembleset_data/ensembleset.h5', 'r') as hdf:\n",
+    "with h5py.File('examples/ensemblesets/calories.h5', 'r') as hdf:\n",
     "\n",
     "    num_datasets=len(list(hdf['train'].keys())) - 1\n",
     "    print(f\"Testing datasets: {list(hdf['test'].keys())}\")\n",
     "    print(f'Will generate swarm output for {num_datasets} datasets')\n",
     "\n",
     "    for i in range(4):\n",
-    "        models=glob.glob(f'ensembleswarm_models/swarm/{i}/*.pkl')\n",
+    "        models=glob.glob(f'examples/swarms/calories/swarm/{i}/*.pkl')\n",
     "\n",
     "        for _, model_path in enumerate(models):\n",
     "            model_type = model_path.split('/')[-1]\n",
