Added example results to gitignore and updated tests.

--- a/examples/regression_calorie_burn.ipynb
+++ b/examples/regression_calorie_burn.ipynb
@@ -151,12 +151,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "460b4540",
    "metadata": {},
    "outputs": [],
    "source": [
-    "rerun_iteration_optimization = True\n",
     "ensembles = 1\n",
     "frac_features = 0.7\n",
     "n_steps = 3\n",
@@ -196,13 +195,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "aea8fe67",
    "metadata": {},
    "outputs": [],
    "source": [
-    "if Path(results_file).is_file() is False and rerun_iteration_optimization is True:\n",
-    "    results = []\n",
+    "if Path(results_file).is_file() is False:\n",
+    "    results_dfs = []\n",
     "\n",
     "    swarm = Swarm(\n",
     "        ensembleset=f'examples/ensemblesets/{ensembleset_file}',\n",
@@ -218,26 +217,26 @@
     "        except OSError as e:\n",
     "            pass\n",
     "\n",
-    "        result = swarm.optimize_swarm(\n",
+    "        results_df = swarm.optimize_swarm(\n",
     "            sample=sample_size,\n",
     "            cv=cv_folds,\n",
     "            default_n_iter=n\n",
     "        )\n",
     "        \n",
-    "        result['iterations'] = [n]*len(result['model'])\n",
+    "        results_df['iterations'] = [n]*len(results_df['model'])\n",
     "\n",
-    "        results.append(pd.DataFrame(result))"
+    "        results_dfs.append(pd.DataFrame(results_df))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "68b15f91",
    "metadata": {},
    "outputs": [],
    "source": [
-    "if Path(results_file).is_file() is False and rerun_iteration_optimization is True:\n",
-    "    results_df = pd.concat(results, axis=0)\n",
+    "if Path(results_file).is_file() is False:\n",
+    "    results_df = pd.concat(results_dfs, axis=0)\n",
     "    results_df['efficiency_mean'] = results_df['score_mean'] / results_df['time']\n",
     "    results_df['efficiency_std'] = results_df['score_std'] / results_df['time']\n",
     "    results_df.to_csv(results_file, index=False)\n",
@@ -425,12 +424,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "56f2533c",
    "metadata": {},
    "outputs": [],
    "source": [
-    "reoptimize_swarm = False\n",
+    "reoptimize_swarm = True\n",
     "retrain_swarm = True\n",
     "generate_swarm_output = True\n",
     "\n",
